--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>ShuYanZhe2019211001001028</artifactId>
+    <artifactId>ShuYanzhe2019211001001028</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>2019211001001028ShuYanZhe</name>
+    <name>2019211001001028ShuYanzhe</name>
     <packaging>war</packaging>
 
     <properties>
@@ -41,6 +41,12 @@
             <version>9.2.1.jre15</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
     </dependencies>
 
