--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,11 +65,11 @@
     </context-param>
     <context-param>
         <param-name>username</param-name>
-        <param-value>sa</param-value>
+        <param-value>skt</param-value>
     </context-param>
     <context-param>
         <param-name>password</param-name>
-        <param-value>admin123456789</param-value>
+        <param-value>123456</param-value>
     </context-param>
 
     <servlet-mapping>
@@ -88,4 +88,14 @@
     <welcome-file-list>
         <welcome-file>home</welcome-file>
     </welcome-file-list>
+
+    <filter>
+        <filter-name>YourNameFilter</filter-name>
+        <filter-class>com.lab2.YourNameFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>YourNameFilter</filter-name>
+        <url-pattern>/lab2/welcome.jsp</url-pattern>
+        <url-pattern>/lab2/validation.jsp</url-pattern>
+    </filter-mapping>
 </web-app>
